# inception-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  slides.tex
inception_mcp/: __init__.py  cli.py  client.py  server.py
tests/: test_client.py  test_server.py
